--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
+/* App.css */
+
+.chat-container {
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.navbar {
   text-align: center;
+  height: 10vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.heading {
+  font-size: 24px;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.description {
+  font-size: 14px;
+  color: #888;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.messages-container {
+  height: 70vh;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+}
+
+.message-container {
+  display: flex;
+  margin-bottom: 10px;
+  flex-direction: column;
+}
+
+.profile {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: bold;
+  background-color: #007bff;
 }
 
-.App-link {
-  color: #61dafb;
+.name-container {
+  margin-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name {
+  margin: 0;
+  font-weight: bold;
+}
+
+.message-details {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.message {
+  margin: 0;
+  margin-top: 0;
+  background-color: #b6b6b6;
+  padding: 10px;
+  border-radius: 0 10px 10px 10px;
+  margin-left: 40px;
+  margin-right: 10px;
+}
+
+.like-icon {
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.send-message-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  border-radius: 40px;
+  border: 2px solid grey;
+  padding-right: 10px;
+  height: 6vh;
+}
+
+.input-field {
+  flex: 1;
+  padding: 8px;
+  border: 0;
+  outline: none;
+  margin-right: 10px;
+  border-radius: 40px;
+}
+
+.send-button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.fa-smile {
+  color: #007bff;
+}
+
+.input-container{
+  border: 1px solid grey;
+  padding-right: 10px;
+  border-radius: 4px;
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
